--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
 simpsh
+/CMakeLists.txt
+/.idea/.name
+/cmake-build-debug/CMakeFiles/3.23.2/CompilerIdC/a.exe
+/cmake-build-debug/build.ninja
+/cmake-build-debug/.cmake/api/v1/query/cache-v2
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-2b1cd30ae1a1d8119551.json
+/cmake-build-debug/CMakeFiles/clion-environment.txt
+/cmake-build-debug/CMakeFiles/clion-log.txt
+/cmake-build-debug/CMakeFiles/cmake.check_cache
+/cmake-build-debug/cmake_install.cmake
+/cmake-build-debug/CMakeCache.txt
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.23.2/CompilerIdC/CMakeCCompilerId.c
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeDetermineCompilerABI_C.bin
+/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-f6c69d4a9b22ae05dcc8.json
+/cmake-build-debug/CMakeFiles/CMakeOutput.log
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeRCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeSystem.cmake
+/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-d4571f1f6b981332b845.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2023-02-07T20-03-48-0238.json
+/cmake-build-debug/Testing/Temporary/LastTest.log
+/.idea/misc.xml
+/.idea/modules.xml
+/cmake-build-debug/CMakeFiles/rules.ninja
+/.idea/simple-shell.iml
+/cmake-build-debug/.cmake/api/v1/reply/target-simple_shell-Debug-855a64b874ce4f2a7569.json
+/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-ce0877cee5257c4a0213.json
+/.idea/vcs.xml
+/.idea/workspace.xml
+/test
