--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ simpsh
 /cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-ce0877cee5257c4a0213.json
 /.idea/vcs.xml
 /.idea/workspace.xml
+/test
